# Pouring_Project

./: DQN_Pouring.py  README.md  from.txt  init_setup.py  kukaPouring.py  manual_joint_cntrl.py  new_env.py  pouring.py  pouring_env.py  success.model  test.py
glass/: manifest.xml
glass/meshes/: glass.STL
glass/urdf/: glass.urdf
glass2/urdf/: glass.urdf
glass2/urdf/meshes/: glass2.STL
kuka_glass/: CMakeLists.txt  package.xml
kuka_glass/launch/: display.launch  gazebo.launch
kuka_glass/meshes/: base_link.STL  gripper.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
kuka_glass/urdf/: kuka_glass.csv  kuka_glass.urdf
new_mod/: CMakeLists.txt  package.xml
new_mod/config/: joint_names_new_mod.yaml
new_mod/launch/: display.launch  gazebo.launch
new_mod/meshes/: base_link.STL  end_effector.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
new_mod/urdf/: new_mod.csv  new_mod.urdf
pybullet_data1/: AswinGlass2.7z  sphere_1cm.urdf
pybullet_data1/glass/: manifest.xml
pybullet_data1/glass/urdf/: glass.urdf
pybullet_data1/glass/urdf/meshes/: Glass.STL
